apps/powersync/base/kafka-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-headless
  namespace: volvo-powersync
spec:
  clusterIP: None
  selector:
    app: kafka
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093
