apps/powersync/base/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: volvo-powersync
spec:
  selector:
    app: kafka
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
