apps/powersync/base/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: volvo-powersync
spec:
  selector:
    app: notification-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: volvo-powersync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: ghcr.io/adamabrahamsson/volvo-powersync-notification-service:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8082
          readinessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8082
            initialDelaySeconds: 40
            periodSeconds: 15
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 600m
              memory: 512Mi
